--- a/website/assets/main.css
+++ b/website/assets/main.css
@@ -188,3 +188,10 @@
   .slider.round:before {
     border-radius: 50%;
   }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+  }
